fixed contact spacing

--- a/custom.css
+++ b/custom.css
@@ -20,7 +20,7 @@ body {
 }
 
 .content-section-heading h2 {
-  font-size: 3rem;
+  font-size: 60%;
   color: white;
 }
 
@@ -57,6 +57,11 @@ h6 {
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
+  }
+
+  .list-inline-item:not(:last-child) {
+    margin-right: 0rem;
+    padding-bottom: 5%;
   }
 
 }
@@ -105,7 +110,7 @@ h6 {
 }
 
 .masthead h1 {
-  font-size: flex;
+  font-size: 300%;
   margin: 0;
   padding: 0;
 }
